@@ -1426,7 +1426,8 @@ LISTFILE=/resources/lists.ini
 # CONQUESTS, CONCEPTIONS, NEWPLAYERS, LOSTLEVELS, PLAYERPURGES, CLANINFO,
 # WARRANTS, ADDACCOUNT, ACCOUNTOOC, ACCOUNTOOCNOADMIN, REALNAMEOOC, NOMOOD,
 # REALNAMEOOCNOADMIN, NOLANGUAGE, ACCOUNTLOGINS, ACCOUNTLOGOFFS, CALENDAR,
-# NOMOUTH, or the names of any colors to override the default. 
+# NOMOUTH, DISCORD=channelname, or the names of any colors to override the 
+# default. 
 # Some of the above flags cause events to be automatically broadcasted 
 # on the given channel.
 CHANNELS=\
@@ -2161,6 +2162,15 @@ WHITELISTLOGINS=
 # (See DEBUG above) and the MAXNEWPERIP number above.
 # Default is empty.
 WHITELISTIPSNEWPLAYERS=
+
+# DISCORD_JAR_PATH is for linking discord to one or more channels.
+# It is the VFS path to the JavaCord library  3.9.0 is supported.
+DISCORD_JAR_PATH=/lib/javacord-3.9.0-shaded.jar
+
+# DISCORD_BOT_KEY is for linking discord to one or more channels.
+# It is the secret Bot key you get when you add a Bot to a Discord
+# application on the Discord API web site.
+DISCORD_BOT_KEY=
 
 ######################################################################
 # Custom Room, MOB, Ability, Exit, etc. Object info
